--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "expo-constants": "^18.0.13",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-web": "^0.21.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
