--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-confetti-cannon": "^1.5.2",
+    "react-native-get-random-values": "^2.0.0",
     "react-native-web": "^0.21.0",
     "uuid": "^13.0.0"
   },
